<?xml version="1.0"?>
<package format="3">
  <name>my_ur5_control</name>
  <version>0.1.0</version>
  <description>Custom UR robot with F/T sensor</description>

  <maintainer email="m.elsayed2812@gmail.com">Mohamed Nassar</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build + runtime deps matching CMakeLists.txt -->
  <depend>rclcpp</depend>
  <depend>ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>robot_state_publisher</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>angles</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <!-- Runtime-only -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  <build_type>ament_cmake</build_type>
  <controller_interface plugin="${prefix}/controller_plugins.xml"/>
</export>
</package>
